# triangle_tracing

./: .gitignore  Cargo.toml  README.md
src/: camera.rs  colour.rs  main.rs  material.rs  object.rs  old.rs  old_main.rs  old_vector.rs  render_gl.rs  shape.rs  vector.rs
src/shaders/: pt.comp  pt.frag  quad.vert  quad2.vert  rt.frag  test.frag  test.vert  tex.frag  torus.frag
src/shaders/old/: rt.frag  rt_old.frag
