[package]
name = "triangle_tracing"
version = "0.1.0"
authors = ["kingeta"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
rand = "0.7.3"
#image = "0.23.4"
#obj = "0.8.2"
#minifb = "0.16.0"
#rayon = "1.3.0"
sdl2 = {version = "0.34.5", features = ["bundled", "static-link"]}
gl = "0.14.0"